--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a98997e
+	base = e3f9d48
 	trimbase = 
 	parent = release/kinetic/rqt_web
-	previous = 
+	previous = a98997e
