--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7ea85e6
+	base = eec1f24
 	trimbase = 
 	parent = arch/kinetic/rqt_web
-	previous = 
+	previous = 7ea85e6
