--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4593987
+	base = 352dbdf
 	trimbase = 
 	parent = release/lunar/rqt_web
-	previous = 
+	previous = 4593987
