--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4455fcb
+	base = bccb6d4
 	trimbase = 
 	parent = arch/lunar/rqt_web
-	previous = 
+	previous = 4455fcb
