--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0b009a9
+	base = 0c695e1
 	trimbase = 
 	parent = release/melodic/rqt_web
-	previous = 
+	previous = 0b009a9
