--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b739192
+	base = 251b2b4
 	trimbase = 
 	parent = arch/melodic/rqt_web
-	previous = 
+	previous = b739192
